kubernetes/flask-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
      annotations:
        promtail.io/scrape: "true"
    spec:
      containers:
        - name: flask-app
          image: _{_IMAGE_}_
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "500m" # This limits the container to 50% of a CPU core
              memory: "256Mi" # This limits the container to 256MB of memory
            requests:
              cpu: "250m" # This reserves 25% of a CPU core for the container
              memory: "128Mi" # This reserves 128MB of memory for the container
