kubernetes/flask-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  labels:
    job: flask-api
    app: flask-app
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 5000
